Fin del proyecto

--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,10 @@
     font-family: 'Orbitron', sans-serif;
     font-size: medium;
 }
+.bton1{
+    padding: 1.25rem;
+    width: 13rem;
+    background-color: black;
+    font-family: 'Orbitron', sans-serif;
+    font-size: medium;
+}
