--- a/css/juego.css
+++ b/css/juego.css
@@ -6,6 +6,7 @@
     background-color: rgba(3, 4, 4, 0.718);
     text-align: center;
     width: 50rem;
+    margin-bottom: 2rem;
 }
 .men{
     color: black;
@@ -14,16 +15,26 @@
     padding: 1rem 20rem 1rem;
     margin-top: 1rem;
     margin-bottom: 3rem;
+    font-weight: bolder;
 }
-.uno {
-   color: aqua;
-    display: flex;
-    flex-direction: column;
-    height: 1rem;
-    
-}
-.dos{
-    color: aqua;
 
-    height: 1rem;
+.label{
+    font-family: 'Orbitron', sans-serif;
+    font-size: x-large; 
+    margin-top: 2rem; 
+}
+.ahorcado{
+    background-color: rgba(0, 0, 0, 0.495);
+    width: 50rem;
+    text-align: center;
+    border-radius: 3%;
+}
+   
+.muneco{
+   
+    display: block;
+    width: 50rem;
+    font-family: 'Orbitron', sans-serif;
+    font-size:xx-large;
+
 }
