--- a/css/agregar.css
+++ b/css/agregar.css
@@ -11,18 +11,41 @@
 }
 .sentens{
     color: rgb(247, 195, 26);
-    display: flex;
-    margin-left: 16rem;
-    margin-bottom: 0.5rem;
     font-weight: bolder;
-}
+} 
 .men{
-    margin-top: 2rem;
-    margin: 2rem;
+    margin-top: 0.5rem;
+    margin: 1rem;
     color: black;
     font-family: 'Orbitron', sans-serif;
     font-size: medium;
-    padding: 1rem 20rem 1rem;
-    
-    
+    padding: 1rem 10rem 1rem 10rem;
+    text-align: center;
 }
+.bi2{
+    color: brown;
+    margin-right: 0.5rem;
+}
+.div1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+ @media (max-width:500px) {
+    .title2{
+        font-size: 1.3rem; 
+    }
+    .input{
+        width: 12rem; 
+    }
+    .men{
+        margin-top: 0.5rem;
+        margin: 0.5rem;
+        font-size:0.8rem;
+        padding: 1rem 1rem 1rem 1rem;
+        text-align:center;
+    }
+} 
+
+
